@@ -1,3 +1,6 @@
+2013-11-19  Roland Clobus <rclobus@rclobus.nl>
+	* common/Makefile.am: Build version.h when needed.
+
 2013-11-17  Roland Clobus <rclobus@rclobus.nl>
 	* configure.ac: Enable (experimental) support for Gtk+3.
 	* client/gtk/frontend.c, common/gtk/colors.c, common/gtk/common_gtk.h,
